tests/010_empty_set_sig2.pan
assert : { b:bool | b = true } -> unit

f : {s:string|true} -> unit
f = \s:string. assert false
